@@ -1,3 +1,12 @@
+2005-09-10  Shiro Kawai  <shiro@acm.org>
+
+	* dbd_mysqllib.scm: use foreign pointer attribute to keep track of
+	  whether a handle is already closed/freed or not.
+	  This adds mysql-handle-closed? and mysql-res-closed? APIs.
+	* dbd/mysql.scm: drop dependency to <dbi-object> and <dbi-result-set>.
+	  Define dbi-open? method to query the low-level handle about
+	  open/close status.  Fixed some bugs.
+
 2005-09-07  Shiro Kawai  <shiro@acm.org>
 
 	* dbd/mysql.scm: adapted to the dbi api change.
